alignement working with text vs whitespace

--- a/lib/valign_textarea.html
+++ b/lib/valign_textarea.html
@@ -12,17 +12,19 @@
       :host {
         display: block;
       }
-      #container, #output {
-        display: block;
-        width: 60em;
-        height: 10em;
+      div {
+        width:60em;
         border: 1px solid #000;
+        font-family: monospace;
+        height: 10em;
+
+      }
+
+      #container, #output {
+
       }
       .interpretation {
         background-color: #eee;
-        width: 60em;
-        height: 5em;
-        border: 1px solid #000;
       }
     </style>
     Raw Text:
