moved actual text from Line to Token

--- a/lib/valign_textarea.html
+++ b/lib/valign_textarea.html
@@ -13,15 +13,15 @@
         display: block;
       }
       div {
-        width:60em;
+        width:70em;
         border: 1px solid #000;
         font-family: monospace;
-        height: 10em;
-
+        height: 15em;
+        overflow-y: auto;
       }
 
       #container, #output {
-
+        overflow-x: auto;
       }
       .interpretation {
         background-color: #eee;
